qt4-x11 (4:4.8.5+git209-g718fae5+dfsg-2) UNRELEASED; urgency=medium


 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Wed, 15 Jan 2014 15:52:50 -0300

qt4-x11 (4:4.8.5+git209-g718fae5+dfsg-1) unstable; urgency=medium

  [ Dmitry Shachnev ]
  * Remove Ubuntu-specific code to add armel to armv6_architectures.
    Ubuntu no longer supports armel.
  * Also remove Ubuntu-specific translations code, dropped in Ubuntu
    in version 4:4.8.4+dfsg-0ubuntu8.

  [ Pino Toscano ]
  * Change the libicu48 suggestion in libqtcore4 to libicu52.
    (Closes: #734514)

  [ Lisandro Damián Nicanor Pérez Meyer ]
  * New upstream git snapshot.
  * Update symbols files with buildd's and current build's logs.
  * Update Standards-Version to 3.9.5, no changes required.
  * Remove commented out AddSense script from static webpage to keep lintian
    calm.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Sun, 12 Jan 2014 00:27:31 -0300

qt4-x11 (4:4.8.5+git192-g085f851+dfsg-2) unstable; urgency=low

  * Fix typo created when refreshing a patch for s390x which created a FTBFS.
  * Update symbols files with buildds' logs.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Fri, 06 Dec 2013 16:38:43 -0300

qt4-x11 (4:4.8.5+git192-g085f851+dfsg-1) unstable; urgency=medium

  * New upstream git snapshot. This includes the fix for CVE-2013-4549: XML
    Entity Expansion Denial of Service. Set severity to medium.
  * Update symbols fles with buildds' logs and current build.
  * Refresh patches.
  * Install new translation.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Thu, 05 Dec 2013 20:45:43 -0300

qt4-x11 (4:4.8.5+git121-g2a9ea11+dfsg1-2) unstable; urgency=low

  * Remove Fix_JavaScriptCore_ftbfs_on_mips64_el.patch, it makes 32 bits
    platforms FTBFS.
  * Take back s390x_jscore.diff to it's original state.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Fri, 11 Oct 2013 20:53:25 -0300
