@@ -1,5 +1,7 @@
 qt4-x11 (4:4.8.5+git209-g718fae5+dfsg-2) UNRELEASED; urgency=medium
 
+  [ Lisandro Damián Nicanor Pérez Meyer ]
+  * Make rm verbose. In this way it's easier to audit the build.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Wed, 15 Jan 2014 15:52:50 -0300
 
